tests/negative/regression/r8.orng
let const a : ? ( _ = Float , _ = Float ) . b . String = a 